--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,8 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>demos-threadlocal</module>
+      <module>demos-designpattern</module>
+      <module>flink-demo</module>
     </modules>
 
     <name>demos</name>
