--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
       <module>flink-demo</module>
         <module>netty-demo</module>
         <module>common</module>
+      <module>jvm-demo</module>
     </modules>
 
     <name>demos</name>
