--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>netty-demo</module>
         <module>common</module>
       <module>jvm-demo</module>
+        <module>rocketmq-demo</module>
     </modules>
 
     <name>demos</name>
