--- a/rocketmq-demo/rocketmq-remoting/pom.xml
+++ b/rocketmq-demo/rocketmq-remoting/pom.xml
@@ -24,8 +24,8 @@
         </dependency>
         <dependency>
             <groupId>io.netty</groupId>
-            <artifactId>netty-tcnative-boringssl-static</artifactId>
-            <version>1.1.33.Fork26</version>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.32.Final</version>
         </dependency>
         <dependency>
             <groupId>io.netty</groupId>
