--- a/rocketmq-demo/namesrv/pom.xml
+++ b/rocketmq-demo/namesrv/pom.xml
@@ -3,18 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>demos</artifactId>
+        <artifactId>rocketmq-demo</artifactId>
         <groupId>com.zy</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>rocketmq-demo</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>rocketmq-remoting</module>
-        <module>namesrv</module>
-    </modules>
+    <artifactId>rocketmq-namesrv</artifactId>
 
 
 </project>
