--- a/rocketmq-demo/pom.xml
+++ b/rocketmq-demo/pom.xml
@@ -14,6 +14,7 @@
     <modules>
         <module>rocketmq-remoting</module>
         <module>namesrv</module>
+        <module>rocketmq-common</module>
     </modules>
 
 
