--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>common</module>
       <module>jvm-demo</module>
         <module>rocketmq-demo</module>
+        <module>spring-web</module>
     </modules>
 
     <name>demos</name>
