--- a/rocketmq-demo/pom.xml
+++ b/rocketmq-demo/pom.xml
@@ -15,6 +15,8 @@
         <module>rocketmq-remoting</module>
         <module>namesrv</module>
         <module>rocketmq-common</module>
+        <module>rocketmq-srvutil</module>
+        <module>rocketmq-store</module>
     </modules>
 
 
