add service provider interface

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
       <module>jvm-demo</module>
         <module>rocketmq-demo</module>
         <module>spring-web</module>
+        <module>java-demo</module>
     </modules>
 
     <name>demos</name>
