--- a/rocketmq-demo/rocketmq-srvutil/pom.xml
+++ b/rocketmq-demo/rocketmq-srvutil/pom.xml
@@ -23,19 +23,29 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>rocketmq-remoting</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>rocketmq-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
+        <!-- Apache Commons CLI provides a simple API for presenting,
+        processing and validating a command line interface -->
         <dependency>
             <groupId>commons-cli</groupId>
             <artifactId>commons-cli</artifactId>
+            <version>1.4</version>
         </dependency>
+
+        <!-- Guava is a suite of core and expanded libraries that include utility classes,
+        google's collections, io classes, and much much more -->
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
+            <version>27.0.1-jre</version>
         </dependency>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
