--- a/java-demo/Java8/pom.xml
+++ b/java-demo/Java8/pom.xml
@@ -3,23 +3,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>demos</artifactId>
+        <artifactId>java-demo</artifactId>
         <groupId>com.zy</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>java-demo</artifactId>
-    <packaging>pom</packaging>
+    <artifactId>Java8</artifactId>
 
-    <name>java-demo</name>
+    <name>Java8</name>
     <!-- FIXME change it to the project's website -->
     <url>http://www.example.com</url>
-    <modules>
-        <module>stream</module>
-        <module>SPI-demo</module>
-        <module>Java8</module>
-    </modules>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
